--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         />
     </head>
     <body>
-        <div id="root" class="font-bai_jamjuree"></div>
+        <div id="root" class="font-bai_jamjuree overflow-hidden"></div>
         <script type="module" src="/src/main.jsx"></script>
     </body>
 </html>
